objects/PLA_Page_ProductServices_List__c.object
<CustomObject>
    <description>Stores the data in the Product Service list from the PL_Calculate Page/Controller (VFP). Then it is is used to render the data in the PL_View page for Product Services</description>
    <fields>
        <fullName>Gross_Margin_Percentage__c</fullName>
        <label>Gross Margin Percentage</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Sales__c</fullName>
        <label>Gross Sales</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Customer__c</fullName>
        <label>Net Sales Customer</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Credits_Amount__c</fullName>
        <label>Other Credits Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_L_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipName>PLA_Page_ProductServices_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Discount__c</fullName>
        <label>Percent_Discount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_Gross_Sales__c</fullName>
        <label>Reduct Gross Sales</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Color_Code__c</fullName>
        <description>Stores the HTML color code used in the line on the report.</description>
        <label>Row Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Archived ProductServices Data</label>
    <nameField>
        <label>Product Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived ProductServices Data Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>